--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,48 +37,54 @@ texlive-infraonly-latest:
   extends: .latest-build
   stage: infraonly
   script:
-    - docker build --pull --tag "$CI_REGISTRY_IMAGE:latest-infraonly" --file infraonly/Dockerfile infraonly/
+    - docker build --pull --tag "$CI_REGISTRY_IMAGE:latest-infraonly" --tag "$CI_REGISTRY_IMAGE:$CI_TEXLIVE_YEAR-infraonly" --file infraonly/Dockerfile infraonly/
     - docker push "$CI_REGISTRY_IMAGE:latest-infraonly"
+    - docker push "$CI_REGISTRY_IMAGE:$CI_TEXLIVE_YEAR-infraonly"
 
 
 texlive-minimal-latest:
   extends: .latest-build
   stage: minimal
   script:
-    - docker build --pull --tag "$CI_REGISTRY_IMAGE:latest-minimal" --file minimal/Dockerfile minimal/
+    - docker build --pull --tag "$CI_REGISTRY_IMAGE:latest-minimal"  --tag "$CI_REGISTRY_IMAGE:$CI_TEXLIVE_YEAR-minimal" --file minimal/Dockerfile minimal/
     - docker push "$CI_REGISTRY_IMAGE:latest-minimal"
+    - docker push "$CI_REGISTRY_IMAGE:$CI_TEXLIVE_YEAR-minimal"
 
 
 texlive-basic-latest:
   extends: .latest-build
   stage: basic
   script:
-    - docker build --pull --tag "$CI_REGISTRY_IMAGE:latest-basic" --file basic/Dockerfile basic/
+    - docker build --pull --tag "$CI_REGISTRY_IMAGE:latest-basic"  --tag "$CI_REGISTRY_IMAGE:$CI_TEXLIVE_YEAR-basic" --file basic/Dockerfile basic/
     - docker push "$CI_REGISTRY_IMAGE:latest-basic"
+    - docker push "$CI_REGISTRY_IMAGE:$CI_TEXLIVE_YEAR-basic"
 
 
 texlive-small-latest:
   extends: .latest-build
   stage: small
   script:
-    - docker build --pull --tag "$CI_REGISTRY_IMAGE:latest-small" --file small/Dockerfile small/
+    - docker build --pull --tag "$CI_REGISTRY_IMAGE:latest-small"  --tag "$CI_REGISTRY_IMAGE:$CI_TEXLIVE_YEAR-small" --file small/Dockerfile small/
     - docker push "$CI_REGISTRY_IMAGE:latest-small"
+    - docker push "$CI_REGISTRY_IMAGE:$CI_TEXLIVE_YEAR-small"
 
 
 texlive-medium-latest:
   extends: .latest-build
   stage: medium
   script:
-    - docker build --pull --tag "$CI_REGISTRY_IMAGE:latest-medium" --tag "$CI_REGISTRY_IMAGE:latest" --file medium/Dockerfile medium/
+    - docker build --pull --tag "$CI_REGISTRY_IMAGE:latest-medium"  --tag "$CI_REGISTRY_IMAGE:$CI_TEXLIVE_YEAR-medium" --tag "$CI_REGISTRY_IMAGE:latest" --file medium/Dockerfile medium/
     - docker push "$CI_REGISTRY_IMAGE:latest-medium"
+    - docker push "$CI_REGISTRY_IMAGE:$CI_TEXLIVE_YEAR-medium"
 
 
 texlive-full-latest:
   extends: .latest-build
   stage: full
   script:
-    - docker build --pull --tag "$CI_REGISTRY_IMAGE:latest-full" --file full/Dockerfile full/
+    - docker build --pull --tag "$CI_REGISTRY_IMAGE:latest-full"  --tag "$CI_REGISTRY_IMAGE:$CI_TEXLIVE_YEAR-full" --file full/Dockerfile full/
     - docker push "$CI_REGISTRY_IMAGE:latest-full"
+    - docker push "$CI_REGISTRY_IMAGE:$CI_TEXLIVE_YEAR-full"
 
 
 texlive-infraonly-archived:
