Fix multiline scripts

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,11 +33,11 @@ texlive-infraonly-latest:
   extends: .latest-build
   stage: infraonly
   script:
-    - docker build \
-      --pull \
-      --tag "$CI_REGISTRY_IMAGE:$TEXLIVE_YEAR-infraonly" \
-      --tag "$CI_REGISTRY_IMAGE:latest-infraonly" \
-      --file infraonly/Dockerfile \
+    - docker build
+      --pull
+      --tag "$CI_REGISTRY_IMAGE:$TEXLIVE_YEAR-infraonly"
+      --tag "$CI_REGISTRY_IMAGE:latest-infraonly"
+      --file infraonly/Dockerfile
       infraonly/
     - docker push "$CI_REGISTRY_IMAGE:$TEXLIVE_YEAR-infraonly"
     - docker push "$CI_REGISTRY_IMAGE:latest-infraonly"
@@ -47,10 +47,10 @@ texlive-minimal-latest:
   extends: .latest-build
   stage: minimal
   script:
-    - docker build \
-      --tag "$CI_REGISTRY_IMAGE:$TEXLIVE_YEAR-minimal" \
-      --tag "$CI_REGISTRY_IMAGE:latest-minimal" \
-      --file minimal/Dockerfile \
+    - docker build
+      --tag "$CI_REGISTRY_IMAGE:$TEXLIVE_YEAR-minimal"
+      --tag "$CI_REGISTRY_IMAGE:latest-minimal"
+      --file minimal/Dockerfile
       minimal/
     - docker push "$CI_REGISTRY_IMAGE:$TEXLIVE_YEAR-minimal"
     - docker push "$CI_REGISTRY_IMAGE:latest-minimal"
@@ -60,10 +60,10 @@ texlive-basic-latest:
   extends: .latest-build
   stage: basic
   script:
-    - docker build \
-      --tag "$CI_REGISTRY_IMAGE:$TEXLIVE_YEAR-basic" \
-      --tag "$CI_REGISTRY_IMAGE:latest-basic" \
-      --file basic/Dockerfile \
+    - docker build
+      --tag "$CI_REGISTRY_IMAGE:$TEXLIVE_YEAR-basic"
+      --tag "$CI_REGISTRY_IMAGE:latest-basic"
+      --file basic/Dockerfile
       basic/
     - docker push "$CI_REGISTRY_IMAGE:$TEXLIVE_YEAR-basic"
     - docker push "$CI_REGISTRY_IMAGE:latest-basic"
@@ -73,10 +73,10 @@ texlive-small-latest:
   extends: .latest-build
   stage: small
   script:
-    - docker build \
-      --tag "$CI_REGISTRY_IMAGE:$TEXLIVE_YEAR-small" \
-      --tag "$CI_REGISTRY_IMAGE:latest-small" \
-      --file small/Dockerfile \
+    - docker build
+      --tag "$CI_REGISTRY_IMAGE:$TEXLIVE_YEAR-small"
+      --tag "$CI_REGISTRY_IMAGE:latest-small"
+      --file small/Dockerfile
       small/
     - docker push "$CI_REGISTRY_IMAGE:$TEXLIVE_YEAR-small"
     - docker push "$CI_REGISTRY_IMAGE:latest-small"
@@ -86,11 +86,11 @@ texlive-medium-latest:
   extends: .latest-build
   stage: medium
   script:
-    - docker build \
-      --tag "$CI_REGISTRY_IMAGE:$TEXLIVE_YEAR-medium" \
-      --tag "$CI_REGISTRY_IMAGE:latest-medium" \
-      --tag "$CI_REGISTRY_IMAGE:latest" \
-      --file medium/Dockerfile \
+    - docker build
+      --tag "$CI_REGISTRY_IMAGE:$TEXLIVE_YEAR-medium"
+      --tag "$CI_REGISTRY_IMAGE:latest-medium"
+      --tag "$CI_REGISTRY_IMAGE:latest"
+      --file medium/Dockerfile
       medium/
     - docker push "$CI_REGISTRY_IMAGE:$TEXLIVE_YEAR-medium"
     - docker push "$CI_REGISTRY_IMAGE:latest-medium"
@@ -100,10 +100,10 @@ texlive-full-latest:
   extends: .latest-build
   stage: full
   script:
-    - docker build \
-      --tag "$CI_REGISTRY_IMAGE:$TEXLIVE_YEAR-full" \
-      --tag "$CI_REGISTRY_IMAGE:latest-full" \
-      --file full/Dockerfile \
+    - docker build
+      --tag "$CI_REGISTRY_IMAGE:$TEXLIVE_YEAR-full"
+      --tag "$CI_REGISTRY_IMAGE:latest-full"
+      --file full/Dockerfile
       full/
     - docker push "$CI_REGISTRY_IMAGE:$TEXLIVE_YEAR-full"
     - docker push "$CI_REGISTRY_IMAGE:latest-full"
@@ -113,9 +113,9 @@ texlive-infraonly-archived:
   extends: .archived-build
   stage: infraonly
   script:
-    - docker build \
-      --tag "$CI_REGISTRY_IMAGE:$TEXLIVE_YEAR-infraonly" \
-      --file $TEXLIVE_YEAR/infraonly/Dockerfile \
+    - docker build
+      --tag "$CI_REGISTRY_IMAGE:$TEXLIVE_YEAR-infraonly"
+      --file $TEXLIVE_YEAR/infraonly/Dockerfile
       $TEXLIVE_YEAR/infraonly/
     - docker push "$CI_REGISTRY_IMAGE:$TEXLIVE_YEAR-infraonly"
 
@@ -124,9 +124,9 @@ texlive-minimal-archived:
   extends: .archived-build
   stage: minimal
   script:
-    - docker build \
-      --tag "$CI_REGISTRY_IMAGE:$TEXLIVE_YEAR-minimal" \
-      --file $TEXLIVE_YEAR/minimal/Dockerfile \
+    - docker build
+      --tag "$CI_REGISTRY_IMAGE:$TEXLIVE_YEAR-minimal"
+      --file $TEXLIVE_YEAR/minimal/Dockerfile
       $TEXLIVE_YEAR/minimal/
     - docker push "$CI_REGISTRY_IMAGE:$TEXLIVE_YEAR-minimal"
 
@@ -135,9 +135,9 @@ texlive-basic-archived:
   extends: .archived-build
   stage: basic
   script:
-    - docker build \
-      --tag "$CI_REGISTRY_IMAGE:$TEXLIVE_YEAR-basic" \
-      --file $TEXLIVE_YEAR/basic/Dockerfile \
+    - docker build
+      --tag "$CI_REGISTRY_IMAGE:$TEXLIVE_YEAR-basic"
+      --file $TEXLIVE_YEAR/basic/Dockerfile
       $TEXLIVE_YEAR/basic/
     - docker push "$CI_REGISTRY_IMAGE:$TEXLIVE_YEAR-basic"
 
@@ -146,9 +146,9 @@ texlive-small-archived:
   extends: .archived-build
   stage: small
   script:
-    - docker build \
-      --tag "$CI_REGISTRY_IMAGE:$TEXLIVE_YEAR-small" \
-      --file $TEXLIVE_YEAR/small/Dockerfile \
+    - docker build
+      --tag "$CI_REGISTRY_IMAGE:$TEXLIVE_YEAR-small"
+      --file $TEXLIVE_YEAR/small/Dockerfile
       $TEXLIVE_YEAR/small/
     - docker push "$CI_REGISTRY_IMAGE:$TEXLIVE_YEAR-small"
 
@@ -157,9 +157,9 @@ texlive-medium-archived:
   extends: .archived-build
   stage: medium
   script:
-    - docker build \
+    - docker build
       --tag "$CI_REGISTRY_IMAGE:$TEXLIVE_YEAR-medium"
-      --file $TEXLIVE_YEAR/medium/Dockerfile \
+      --file $TEXLIVE_YEAR/medium/Dockerfile
       $TEXLIVE_YEAR/medium/
     - docker push "$CI_REGISTRY_IMAGE:$TEXLIVE_YEAR-medium"
 
@@ -168,9 +168,9 @@ texlive-full-archived:
   extends: .archived-build
   stage: full
   script:
-    - docker build \
-      --tag "$CI_REGISTRY_IMAGE:$TEXLIVE_YEAR-full" \
-      --tag "$CI_REGISTRY_IMAGE:$TEXLIVE_YEAR" \
-      --file $TEXLIVE_YEAR/full/Dockerfile \
+    - docker build
+      --tag "$CI_REGISTRY_IMAGE:$TEXLIVE_YEAR-full"
+      --tag "$CI_REGISTRY_IMAGE:$TEXLIVE_YEAR"
+      --file $TEXLIVE_YEAR/full/Dockerfile
       $TEXLIVE_YEAR/full/
     - docker push "$CI_REGISTRY_IMAGE:$TEXLIVE_YEAR-full"
