More fixing CI rules

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,15 +18,15 @@ stages:
 .latest-build:
   extends: .docker-build
   rules:
+    - if: $TEXLIVE_YEAR
     - if: $TEXLIVE_MODE == "latest"
-      if: $TEXLIVE_YEAR != ""
 
 
 .archived-build:
   extends: .docker-build
   rules:
+    - if: $TEXLIVE_YEAR
     - if: $TEXLIVE_MODE == "archive"
-      if: $TEXLIVE_YEAR != ""
 
 
 texlive-infraonly-latest:
