--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,8 +20,7 @@ stages:
   extends: .docker
   stage: build
   after_script:
-    - |
-      docker build
+    - docker build
       --tag "$CI_REGISTRY_IMAGE:$TEXLIVE_YEAR-$TEXLIVE_SCHEME"
       --file "$TEXLIVE_YEAR/$TEXLIVE_SCHEME/Dockerfile"
       $TEXLIVE_YEAR/$TEXLIVE_SCHEME/
